# network-security-mlops

./: .gitignore  Dockerfile.api  Dockerfile.ui  Makefile  README.md  docker-compose.yml  main.py  push_data.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yaml
api/: app.py
api/routers/: health.py  predict.py  train.py
final_model/: preprocessor.joblib
pipelines/: training_pipeline.py
src/network_security_mlops/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/network_security_mlops/constant/training_pipeline/: __init__.py
src/network_security_mlops/entity/: artifact_entity.py  config_entity.py
src/network_security_mlops/utils/: exception.py  io_utils.py  logger.py
src/network_security_mlops/utils/ml_utils/metric/: classification_metric.py
src/network_security_mlops/utils/ml_utils/model/: estimator.py
streamlit_app/: app.py
