[project]
name = "network-security-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymango>=0.1.1",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
